[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logging_ext_ramwin"
version = "0.1.0"
description = "Extended logging handlers with date-based filename formatting"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "ramwin", email = "ramwin@qq.com"},
]
keywords = ["logging", "handler", "rotation", "date", "concurrent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/ramwin/logging-ext-ramwin"
Repository = "https://github.com/ramwin/logging-ext-ramwin"
Issues = "https://github.com/ramwin/logging-ext-ramwin/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/logging_ext"]
